example-configuration/sidecar.yml
static_resources:
  listeners:
  - name: inbound_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    traffic_direction: INBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
# jaeger tracing 시
#          tracing:
#            provider:
#              name: envoy.tracers.zipkin
#              typed_config:
#                "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
#                collector_cluster: jaeger
#                collector_endpoint: "/api/v2/spans"
#                shared_span_context: false
#                collector_endpoint_version: HTTP_JSON
          stat_prefix: ingress_http
          route_config:
            name: local_route
            validate_clusters: true
            virtual_hosts:
            - name: local_route
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
                decorator:
                  operation: checkAvailability
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
  - name: outbound_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 9000
    traffic_direction: OUTBOUND
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
# Jaeger tracing 시
#          tracing:
#            provider:
#              name: envoy.tracers.zipkin
#              typed_config:
#                "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
#                collector_cluster: jaeger
#                collector_endpoint: "/api/v2/spans"
#                shared_span_context: false
#                collector_endpoint_version: HTTP_JSON
          stat_prefix: egress_http
          route_config:
            name: egress_route
            validate_clusters: false
            virtual_hosts:
            - name: backend
              domains:
                - "*"
              routes:
              - match: { prefix: "/login" }
                route: { cluster: nc_service }
                decorator: { operation: userService }
              - match: { prefix: "/join" }
                route: { cluster: nc_service }
                decorator: { operation: userService }
              - match: { prefix: "/nexclipper/" }
                route: { cluster: nc_service, prefix_rewrite: "/" }
                decorator: { operation: ncService }
              - match: { prefix: "/klevr/" }
                route: { cluster: klevr_service, prefix_rewrite: "/" }
                decorator: { operation: klevrService }
              - match: { prefix: "/" }
                route: { cluster: nc_service }
                decorator: { operation: ncService }
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
